# data

./: .gitignore  .gitmodules  CMakeLists.txt  data.c  document.c  document_main.c  key_value.c  key_value_main.c  main.c  relational.c
.github/workflows/: cmake.yml
include/data/: data.h  document.h  key_value.h  relational.h  spatial.h
resources/: key_value_input
test/: document_db_instructions  hw2.sql  key_value_test.sh
test/input/: key_value_input  out  raw
test/output/: key_value_output
